--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,7 @@
     </div>
     <button onclick="searchSong()">Search</button>
     <div id="result"></div>
+    <div id="lyrics"></div>
 
     <script>
         function openCORS() {
@@ -100,12 +101,23 @@
                 }
                 const text = await response.text();
                 const videoIdMatch = text.match(/"videoId":"(.*?)"/);
-                const titleMatch = text.match(/"title":{"runs":\[{"text":"(.*?)"}/);
+                const titleMatch = text.match(/"title":{"runs":
+
+\[{"text":"(.*?)"}/);
                 if (videoIdMatch && titleMatch) {
                     const videoId = videoIdMatch[1];
                     const videoTitle = titleMatch[1];
                     const linkCode = `<div><strong>${videoTitle}</strong></div><a href="https://www.youtube.com/watch?v=${videoId}" target="_blank">${title} ${genre} (${type})</a>`;
                     document.getElementById('result').innerHTML = linkCode;
+
+                    // Fetch lyrics
+                    const lyricsResponse = await fetch(`https://api.lyrics.ovh/v1/${encodeURIComponent(title)}/${encodeURIComponent(genre)}`);
+                    const lyricsData = await lyricsResponse.json();
+                    if (lyricsData.lyrics) {
+                        document.getElementById('lyrics').innerHTML = `<pre>${lyricsData.lyrics}</pre>`;
+                    } else {
+                        document.getElementById('lyrics').innerHTML = "No lyrics found.";
+                    }
                 } else {
                     document.getElementById('result').innerHTML = "No video found.";
                     if (document.getElementById('loopRandom').checked) {
