--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,133 @@
-const title = titleInput.value;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YouTube Music Search</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+        #lyrics-container {
+            width: 100%;
+            max-width: 600px;
+            height: 300px;
+            overflow-y: scroll;
+            border: 1px solid #ccc;
+            padding: 10px;
+            background-color: #fff;
+        }
+        .center {
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <h1>YouTube Music Search</h1>
+    <button onclick="openCORS()">CORS Enabling System</button>
+    <label>
+        <input type="checkbox" id="randomTitle" onchange="toggleInput('title', 'randomTitle')"> Use random title
+    </label>
+    <input type="text" id="title" placeholder="Enter song title">
+    <label>
+        <input type="checkbox" id="randomGenre" onchange="toggleInput('genre', 'randomGenre')"> Use random genre
+    </label>
+    <input type="text" id="genre" placeholder="Enter genre">
+    <div>
+        <label>
+            <input type="radio" name="searchType" value="Top Result" checked> Top Result
+        </label>
+        <label>
+            <input type="radio" name="searchType" value="Random Search"> Random Search
+        </label>
+    </div>
+    <div>
+        <label>
+            <input type="radio" name="type" value="Official Audio" checked> Official Audio
+        </label>
+        <label>
+            <input type="radio" name="type" value="Music Video"> Music Video
+        </label>
+    </div>
+    <button onclick="searchSong()">Search</button>
+    <div id="result" class="center"></div>
+    <div id="lyrics-container">
+        <div id="lyrics"></div>
+    </div>
+    <div id="error-message" style="color: red;"></div>
+
+    <script>
+        let retryCount = 0;
+        const maxRetries = 5;
+        const retryDelay = 5000; // 5 seconds
+
+        function openCORS() {
+            window.open('https://cors-anywhere.herokuapp.com/corsdemo', '_blank');
+        }
+
+        function toggleInput(inputId, checkboxId) {
+            const input = document.getElementById(inputId);
+            const checkbox = document.getElementById(checkboxId);
+            input.disabled = checkbox.checked;
+        }
+
+        async function fetchTextFile(url) {
+            const response = await fetch(url);
+            const text = await response.text();
+            return text.split('\n').map(line => line.trim()).filter(line => line.length > 0);
+        }
+
+        async function getRandomWord() {
+            const words = await fetchTextFile('words.txt');
+            return words[Math.floor(Math.random() * words.length)];
+        }
+
+        async function getRandomGenre() {
+            const genres = await fetchTextFile('genres.txt');
+            return genres[Math.floor(Math.random() * genres.length)];
+        }
+
+        async function fetchLyrics(artist, songTitle) {
+            const cleanTitle = songTitle.replace(/\(.*?\)/g, '').trim(); // Remove anything in parentheses
+            try {
+                const response = await fetch(`https://api.lyrics.ovh/v1/${encodeURIComponent(artist)}/${encodeURIComponent(cleanTitle)}`);
+                const data = await response.json();
+                if (data.lyrics) {
+                    return `<pre>${data.lyrics}</pre>`;
+                } else {
+                    throw new Error("No lyrics found");
+                }
+            } catch (error) {
+                console.error('Lyrics fetch error:', error);
+                return "Lyrics not found.";
+            }
+        }
+
+        async function searchSong() {
+            try {
+                const titleInput = document.getElementById('title');
+                const genreInput = document.getElementById('genre');
+                const useRandomTitle = document.getElementById('randomTitle').checked;
+                const useRandomGenre = document.getElementById('randomGenre').checked;
+                const searchType = document.querySelector('input[name="searchType"]:checked').value;
+                const type = document.querySelector('input[name="type"]:checked').value;
+
+                if (useRandomTitle) {
+                    titleInput.value = await getRandomWord();
+                }
+
+                if (useRandomGenre) {
+                    genreInput.value = await getRandomGenre();
+                }
+
+                const title = titleInput.value;
                 const genre = genreInput.value;
 
                 const searchQuery = `${title} ${genre} (${type})`;
@@ -85,6 +214,12 @@ const title = titleInput.value;
                 document.getElementById('error-message').innerText = `An error occurred while searching for the song: ${error.message}`;
             }
         }
+
+        async function main() {
+            document.getElementById('search-song-button').addEventListener('click', searchSong);
+        }
+
+        main();
     </script>
 </body>
 </html>
